log/build_2024-02-08_11-19-19/object_detection/stderr.log
  File "/home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection/image_converter.py", line 94
    return distance_cm
    ^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function

